kubernetes/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: boompow-deployment
  namespace: boompow-next
  labels:
    app: boompow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boompow
  template:
    metadata:
      labels:
        app: boompow
    spec:
      containers:
      - name: boompow
        image: replaceme
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 1Gi
        command: ["/bin/sh", "-c"]
        args: ["boompow-server server"]
        ports:
          - containerPort: 8080
        imagePullPolicy: "Always"
