kubernetes/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: boompow-service
  namespace: boompow-next
spec:
  selector:
      app: boompow
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
